--- a/spring-simple/src/main/resources/log4j.properties
+++ b/spring-simple/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.rootLogger=DEBUG, test
 #log4j.appender.test=org.apache.log4j.FileAppender
 log4j.appender.test=org.apache.log4j.ConsoleAppender
 #log4j.appender.test.File="target/log.txt"
-log4j.appender.test.Layout=org.apache.log4j.SimpleLayout
+log4j.appender.test.layout=org.apache.log4j.SimpleLayout
