--- a/spring-simulation/pom.xml
+++ b/spring-simulation/pom.xml
@@ -13,7 +13,6 @@
       <artifactId>spring</artifactId>
       <version>2.5.5</version>
     </dependency>
-    
     <dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-core</artifactId>
@@ -30,6 +29,13 @@
 	  <groupId>log4j</groupId>
 	  <artifactId>log4j</artifactId>
 	  <version>1.2.16</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>test</scope>
     </dependency>
     
   </dependencies>
