--- a/spring-aop-annotation-basic/pom.xml
+++ b/spring-aop-annotation-basic/pom.xml
@@ -39,10 +39,16 @@
     </dependency>
     
     <dependency>
-	  <groupId>org.aspectj</groupId>
-	  <artifactId>aspectjweaver</artifactId>
-	  <version>1.6.10</version>
-	</dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.6.10</version>
+    </dependency>
+	
+    <dependency>
+      <groupId>aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.5.3</version>
+    </dependency>
     
   </dependencies>
   
