--- a/hibernate-annotation-simple/src/main/resources/log4j.properties
+++ b/hibernate-annotation-simple/src/main/resources/log4j.properties
@@ -8,3 +8,5 @@ log4j.appender.test=org.apache.log4j.ConsoleAppender
 #log4j.appender.test.layout=org.apache.log4j.SimpleLayout
 log4j.appender.test.layout=org.apache.log4j.PatternLayout
 log4j.appender.test.layout.conversionPattern=%p [%d{yyyy-MM-dd HH:mm:ss}] - %c %m %n
+
+#log4j.logger.org.hibernate.tool.hbm2ddl=debug
