project j2ee-log4j-simple

--- a/j2ee-log4j-simple/src/main/resources/log4j.properties
+++ b/j2ee-log4j-simple/src/main/resources/log4j.properties
@@ -1,11 +1,11 @@
-log4j.rootCategory=INFO, STDOUT, FILE
+log4j.rootCategory=WARN, STDOUT, FILE
 
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=%d %p [%t] [%t] - <%m>%n
 
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.file=log2.txt
+log4j.appender.FILE.file=target/log-simplelayout-fileappender.txt
 log4j.appender.FILE.Append=false
 log4j.appender.FILE.Threshold=DEBUG
 log4j.appender.FILE.layout=org.apache.log4j.SimpleLayout
