--- a/j2ee-dom4j-simple/pom.xml
+++ b/j2ee-dom4j-simple/pom.xml
@@ -27,6 +27,12 @@
       <version>1.6.1</version>
     </dependency>
     
+    <dependency>
+    	<groupId>jaxen</groupId>
+    	<artifactId>jaxen</artifactId>
+    	<version>1.1.1</version>
+    </dependency>
+    
   </dependencies>
   
 </project>
