--- a/j2ee-jaxb-simple/pom.xml
+++ b/j2ee-jaxb-simple/pom.xml
@@ -7,7 +7,11 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
-    
+    <dependency>
+	  <groupId>javax.xml.bind</groupId>
+	  <artifactId>jaxb-api</artifactId>
+	  <version>2.2.11</version>
+    </dependency>
     <dependency>
 	  <groupId>log4j</groupId>
 	  <artifactId>log4j</artifactId>
